--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -65,7 +65,7 @@ body.skey {
         	    display: block;
 	            text-transform: uppercase;
             }
-            a {
+            .details a {
                 margin: 10px 0 14px;
                 &.plant-in-group {
                     background: url(/static/images/layout/plant-in-group-btn-orange.png) no-repeat 0 0;	
